[package]
name = "context_switch"
version = "0.1.0"
authors = ["David Kalina O'Sullivan <david.kalina.osullivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
chrono = "0.4.11"
intervaltree = "0.2.5"
thiserror = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"








